<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email..</string>
    <string name="enter_your_password">Enter your password..</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="time">Time</string>
    <string name="_0_00" translatable="false">0.00</string>
    <string name="Distance">Distance</string>
    <string name="distance">Distance</string>
    <string name="curr_0_00" translatable="false">0.00</string>
    <string name="spd_in_mph" translatable="false">Spd in mph</string>
    <string name="spd_in_km_h" translatable="false">Spd in km/h</string>

    <string-array name="Select_Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>







    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Alert dialog for camera or gallery -->
    <string name="dialog_image_options">Select Image Option</string>

    <string-array name="image_options">
        <item>Choose photo from gallery</item>
        <item>Take picture with camera</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>