<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fitnesstracker.ui.profile.ProfileFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.fitnesstracker.ui.activity.ActivityFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.fitnesstracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>